# 68k-computer

./: .gitignore  .gitmodules  68kcomputer.lib  Makefile  README.md  glue.v  glue.yosys  glue_isim.prj  mmu.v  mmu_tb.v  ram.v  ram_tb.wcfg
68kcomputer.pretty/: HOLE.kicad_mod  SOT-23_Diode.kicad_mod  TSOP-44.kicad_mod  TSOP-48.kicad_mod
backplane/: backplane.lib  backplane.pro  backplane.sch
emulator/: .gitignore  Makefile  addrutil.h  emulator.c  emulator.h  gdbserver.c  gdbserver.h  gfx.c  gfx.h  io.c  io.h  memory.c  memory.h  mmu.c  mmu.h  schedtimer.c  schedtimer.h
glue/: .gitignore  Makefile  ctrl.v  extmem.v  fake68k.v  fake68k_tb.gtkw  fake68k_tb.v  fake68k_tb.wcfg  ft800_interface.v  ft800_interface_tb.gtkw  ft800_interface_tb.v  ft800_interface_tb.wcfg  glue.prj  glue.v  glue.xst  glue_isim.prj  ioports.v  memmap.v  memmap_tb.gtkw  memmap_tb.v  mmu.v  mmu_tb.gtkw  mmu_tb.v  mmu_tb.wcfg  pgtbl.v  prototype.prj  prototype.ucf  prototype.v  prototype.xst  prototype.yosys  prototype_tb.gtkw  prototype_tb.v  ram_tb.gtkw  ram_tb.v  tap.vh  unmap.v
notes/: readtimings.json  readwritetimings.json  writetimings.json
os/: .gitignore  Makefile  romulate.c
os/libc/newlib/newlib/libc/sys/kiteos/: Makefile.am  Makefile.in  aclocal.m4  configure  crt0.c  syscalls.c
prototype/: parts.txt  prototype-cache.lib  prototype-mem.sch  prototype.bak  prototype.kicad_pcb  prototype.pro  prototype.sch
video/: .gitignore  Makefile  composite.v  pointer.v  testpattern.v  timing.v  timing_tb.gtkw  timing_tb.v  timingcalc.go  video.v  video_tb.gtkw  video_tb.v
(+41 files in other folders)
